Se agrego uma imagen y datos personales

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,21 @@
             text-align: center;
             color: black;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            font-size: 1.5cm;
+            font-size: 2cm;
         }
 
-       
+        pre {
+            color: black;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 0.9cm;
+           
+
+
+        }
+
+        img {
+            width: 300px;
+            height: 300px;
+            border-radius: 50%;
+            float: right;
+           }
