--- a/css/main.css
+++ b/css/main.css
@@ -4,25 +4,67 @@
         // nombre de la etiqueta a modificar 
         */
 
-        h1{
+        *{
+            padding: 0;
+            margin: 0;
+            border: 0;
+        }
+
+        header{
             text-align: center;
             color: black;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            font-size: 2cm;
+            
         }
 
-        pre {
-            color: black;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 0.9cm;
-           
-
+        #datosPersonales {
+            width: 100%;
+            margin-top: 16px;
+            display: flex;
+            flex-direction: row;/*row(default va de izquierda a derecha, column(arriba hacia abajo), row-reverse(derecha a izquierda), colum-reverse(abajo hacia arriba)*/
+            justify-content: space-evenly;
+            align-items: flex-start;
 
         }
 
-        img {
-            width: 300px;
-            height: 300px;
-            border-radius: 50%;
-            float: right;
-           }
+        #perfil {
+            width: 100%;
+            margin-top: 16px;
+            display: flex;
+            flex-direction: row;/*row(default va de izquierda a derecha, column(arriba hacia abajo), row-reverse(derecha a izquierda), colum-reverse(abajo hacia arriba)*/
+            justify-content: space-evenly;
+            align-items: flex-start;
+
+        }
+
+        #estudios {
+            width: 100%;
+            margin-top: 16px;
+            display: flex;
+            flex-direction: row;/*row(default va de izquierda a derecha, column(arriba hacia abajo), row-reverse(derecha a izquierda), colum-reverse(abajo hacia arriba)*/
+            justify-content: left;
+            
+            
+        }
+
+        #actividades {
+            width: 100%;
+            margin-top: 16px;
+            display: flex;
+            flex-direction: row;/*row(default va de izquierda a derecha, column(arriba hacia abajo), row-reverse(derecha a izquierda), colum-reverse(abajo hacia arriba)*/
+            justify-content: left;
+            align-items: baseline;
+
+        }
+        #conocimientos {
+            width: 100%;
+            margin-top: 16px;
+            display: flex;
+            flex-direction: row;/*row(default va de izquierda a derecha, column(arriba hacia abajo), row-reverse(derecha a izquierda), colum-reverse(abajo hacia arriba)*/
+            justify-content: left;
+            align-items: flex-start;
+
+        }
+    
+
+ 
